--- a/views/email-verfied.ejs
+++ b/views/email-verfied.ejs
@@ -5,6 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>email verified successfully <a href="http://localhost:3000/signin">click to login</a></h1>
+    <h1>email verified successfully <a href="https://e-market-frontend-gray.vercel.app/signin">click to login</a></h1>
 </body>
 </html>
